# transsip

./: .gitignore  .mailmap  AUTHORS  CHANGELOG  CODING  COPYING  CREDITS  HACKING  INSTALL  MAINTAINER  MIRRORS  README  REPORTING-BUGS  THANKS  TODO
Documentation/: CodingStyle  Mirrors  Motivation  Projects  SubmittingPatches  Todo  logo.txt
Documentation/talk/1/: main.tex
Documentation/talk/iet-patw-2011/: main.tex
Documentation/talk/iet-patw-2011/img/: scheme.dia
contrib/html/: index.html
src/: CMakeLists.txt  alsa.c  alsa.h  anon.h  atomic.h  built-in.h  built_in.h  call-notifier.c  call-notifier.h  call.c  call_notifier.c  call_notifier.h  cli.c  cli.h  cli_cmds.h  clicmds.c  clicmds.h  compiler.h  conf.h  curve.c  curve.h  definitions.mk  dht.c  dht.h  die.h  engine.c  error_and_die.h  gen_build_info.pl  gf.c  gf.h  locking.h  mtrand.c  mtrand.h  netyack.c  netyack.h  notifier.c  notifier.h  signals.h  sip.c  strlcpy.c  (+15 more)
src/cmake/modules/: Pod2Man.cmake
src/netyack/: Makefile
src/sounds/: README  busytone.s16  dialtone.raw  ring.raw
src/transsip/: CMakeLists.txt  Makefile
